--- a/app/src/main/res/drawable/homecard_back1.xml
+++ b/app/src/main/res/drawable/homecard_back1.xml
@@ -4,9 +4,9 @@
 
 
     <gradient
-        android:angle="90"
-        android:endColor="#F0F0F0"
-        android:startColor="#F0F0F0"
+        android:angle="135"
+        android:endColor="#FFFFFF"
+        android:startColor="#FFFFFF"
         android:type="linear" />
 
     <corners
