--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -197,12 +197,12 @@
             android:textSize="@dimen/edittextsize"
             android:textStyle="normal" />
 
-        <TextView
+       <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="* Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
             android:textColor="#040404"
-            android:textSize="13sp" />
+            android:textSize="13sp" />-->
 
 
         <Button
