--- a/app/src/main/res/layout/addnewproduct.xml
+++ b/app/src/main/res/layout/addnewproduct.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,17 +38,16 @@
             </TextView>
 
             <EditText
-                android:id="@+id/edit_UserName"
+                android:id="@+id/edit_ProductName"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/fifty"
                 android:layout_marginTop="@dimen/five"
                 android:layout_weight="1"
                 android:background="@drawable/edittextback"
-                android:drawablePadding="@dimen/twenty"
                 android:ems="10"
                 android:imeOptions="actionDone"
                 android:inputType="text"
-                android:paddingLeft="20dp"
+                android:paddingLeft="@dimen/fifteen"
                 android:textColor="#000000"
                 android:textSize="@dimen/edittextsize"
                 android:textStyle="normal" />
@@ -62,7 +64,7 @@
             </TextView>
 
             <EditText
-                android:id="@+id/edit_CompleteAddress"
+                android:id="@+id/edit_ProductDescription"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/hundred_twenty"
                 android:background="@drawable/edittextback"
@@ -77,7 +79,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/twenty"
+                android:layout_marginTop="@dimen/ten"
                 android:weightSum="2">
 
                 <TextView
@@ -120,10 +122,10 @@
                     android:layout_margin="@dimen/five"
                     android:layout_weight="1"
                     android:background="@drawable/edittextback"
-                    android:drawablePadding="@dimen/ten"
+                    android:paddingLeft="@dimen/ten"
                     android:ems="10"
                     android:imeOptions="actionDone"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:textColor="#000000"
                     android:textSize="@dimen/edittextsize"
                     android:textStyle="normal" />
@@ -135,10 +137,10 @@
                     android:layout_margin="@dimen/five"
                     android:layout_weight="1"
                     android:background="@drawable/edittextback"
-                    android:drawablePadding="@dimen/ten"
+                    android:paddingLeft="@dimen/ten"
                     android:ems="10"
                     android:imeOptions="actionDone"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:textColor="#000000"
                     android:textSize="@dimen/edittextsize"
                     android:textStyle="normal" />
@@ -147,7 +149,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/twenty"
+                android:layout_marginTop="@dimen/ten"
                 android:weightSum="2">
 
                 <TextView
@@ -190,15 +192,15 @@
                     android:layout_margin="@dimen/five"
                     android:layout_weight="1"
                     android:background="@drawable/edittextback"
-                    android:drawablePadding="@dimen/ten"
+                    android:paddingLeft="@dimen/ten"
                     android:ems="10"
                     android:imeOptions="actionDone"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:textColor="#000000"
                     android:textSize="@dimen/edittextsize"
                     android:textStyle="normal" />
 
-                <EditText
+                <Spinner
                     android:id="@+id/edit_GST"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/fifty"
@@ -207,17 +209,14 @@
                     android:background="@drawable/edittextback"
                     android:drawablePadding="@dimen/ten"
                     android:ems="10"
-                    android:imeOptions="actionDone"
-                    android:inputType="text"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/edittextsize"
-                    android:textStyle="normal" />
+                    android:textColor="#000000"/>
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/twenty"
+                android:layout_marginTop="@dimen/ten"
                 android:weightSum="2">
 
                 <TextView
@@ -282,7 +281,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/twenty"
+                android:layout_marginTop="@dimen/ten"
                 android:weightSum="2">
 
                 <TextView
@@ -318,17 +317,14 @@
                 android:layout_height="wrap_content"
                 android:weightSum="2">
 
-                <EditText
-                    android:id="@+id/edit_ProductType"
+                <Spinner
+                    android:id="@+id/ProductType"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/fifty"
                     android:layout_margin="@dimen/five"
                     android:layout_weight="1"
+                    android:spinnerMode="dropdown"
                     android:background="@drawable/edittextback"
-                    android:drawablePadding="@dimen/ten"
-                    android:ems="10"
-                    android:imeOptions="actionDone"
-                    android:inputType="text"
                     android:textColor="#000000"
                     android:textSize="@dimen/edittextsize"
                     android:textStyle="normal" />
@@ -340,7 +336,7 @@
                     android:layout_margin="@dimen/five"
                     android:layout_weight="1"
                     android:background="@drawable/edittextback"
-                    android:drawablePadding="@dimen/ten"
+                    android:paddingLeft="@dimen/ten"
                     android:ems="10"
                     android:imeOptions="actionDone"
                     android:inputType="text"
@@ -352,7 +348,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/fifteen"
+                android:layout_marginTop="@dimen/ten"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Vender"
                 android:textColor="@color/black"
@@ -360,7 +356,7 @@
 
             </TextView>
 
-            <EditText
+            <Spinner
                 android:id="@+id/edit_VenderName"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/fifty"
@@ -368,19 +364,15 @@
                 android:layout_marginBottom="@dimen/ten"
                 android:layout_weight="1"
                 android:background="@drawable/edittextback"
-                android:drawablePadding="@dimen/twenty"
+                android:drawablePadding="@dimen/ten"
                 android:ems="10"
                 android:imeOptions="actionDone"
-                android:inputType="text"
-                android:paddingLeft="20dp"
-                android:textColor="#000000"
-                android:textSize="@dimen/edittextsize"
-                android:textStyle="normal" />
+                android:inputType="text"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/fifteen"
+                android:layout_marginTop="@dimen/ten"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Upload Product Image"
                 android:textColor="@color/black"
@@ -393,97 +385,79 @@
                 android:layout_height="wrap_content"
                 android:weightSum="3">
 
-                <ImageView
+                <androidx.cardview.widget.CardView
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/hundred"
-                    android:layout_margin="@dimen/five"
                     android:layout_weight="1"
-                    android:background="@drawable/edittextback">
+                    android:layout_height="@dimen/hundred"
+                    android:elevation="@dimen/three"
+                    app:cardCornerRadius="@dimen/ten"
+                    android:layout_margin="@dimen/five">
 
-                </ImageView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/edittextback">
 
-                <ImageView
+                        <ImageView
+                            android:id="@+id/productimage1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/upload_image_dummy" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/hundred"
-                    android:layout_margin="@dimen/five"
                     android:layout_weight="1"
-                    android:background="@drawable/edittextback">
+                    android:layout_height="@dimen/hundred"
+                    android:elevation="@dimen/three"
+                    app:cardCornerRadius="@dimen/ten"
+                    android:layout_margin="@dimen/five">
 
-                </ImageView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                <ImageView
+                        <ImageView
+                            android:id="@+id/productimage2"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/upload_image_dummy" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/hundred"
-                    android:layout_margin="@dimen/five"
                     android:layout_weight="1"
-                    android:background="@drawable/edittextback">
+                    android:layout_height="@dimen/hundred"
+                    android:elevation="@dimen/three"
+                    app:cardCornerRadius="@dimen/ten"
+                    android:layout_margin="@dimen/five">
 
-                </ImageView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/productimage3"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/upload_image_dummy" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="3">
-
-                <TextView
-                    android:id="@+id/text_UploadImg1"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="@dimen/forty"
-                    android:layout_margin="@dimen/five"
-                    android:background="@drawable/edittextback"
-                    android:ems="10"
-                    android:text="Upload Img"
-                    android:imeOptions="actionDone"
-                    android:inputType="text"
-                    android:gravity="center"
-                    android:textColor="#000000"
-                    android:layout_alignParentRight="true"
-                    android:textSize="@dimen/edittextsize"
-                    android:textStyle="normal" />
-
-                <TextView
-                    android:id="@+id/text_UploadImg2"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="@dimen/forty"
-                    android:layout_margin="@dimen/five"
-                    android:background="@drawable/edittextback"
-                    android:ems="10"
-                    android:text="Upload Img"
-                    android:imeOptions="actionDone"
-                    android:inputType="text"
-                    android:gravity="center"
-                    android:textColor="#000000"
-                    android:layout_alignParentRight="true"
-                    android:textSize="@dimen/edittextsize"
-                    android:textStyle="normal" />
-
-                <TextView
-                    android:id="@+id/text_UploadImg3"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="@dimen/fifty"
-                    android:layout_margin="@dimen/five"
-                    android:background="@drawable/edittextback"
-                    android:ems="10"
-                    android:text="Upload Img"
-                    android:imeOptions="actionDone"
-                    android:inputType="text"
-                    android:gravity="center"
-                    android:textColor="#000000"
-                    android:layout_alignParentRight="true"
-                    android:textSize="@dimen/edittextsize"
-                    android:textStyle="normal" />
-
-
-            </LinearLayout>
 
             <Button
-                android:id="@+id/btn_Addpickup"
+                android:id="@+id/btn_AddProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/twenty"
@@ -495,6 +469,7 @@
 
 
             <TextView
+                android:id="@+id/back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
