--- a/app/src/main/res/layout/home_home.xml
+++ b/app/src/main/res/layout/home_home.xml
@@ -23,11 +23,11 @@
        android:src="@drawable/bell"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
-       android:layout_marginRight="30dp">
+       android:layout_marginRight="@dimen/ten">
 
    </ImageView>
 
-   <ImageView
+   <!--<ImageView
        android:id="@+id/imagecart"
        android:layout_width="30dp"
        android:layout_height="30dp"
@@ -37,13 +37,13 @@
        android:layout_marginRight="70dp">
 
    </ImageView>
-
+-->
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0A22A1"
-       android:textSize="20dp"
+       android:textSize="@dimen/edittextsize"
        android:text="Home"
        android:layout_toRightOf="@+id/menuimage"
        android:layout_marginTop="9dp"
