--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -19,16 +19,14 @@
                 android:layout_marginTop="20dp"
                 android:background="#132BA6">
 
-                <TextView
+                <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:gravity="center"
-                    android:text="Logo"
-                    android:textColor="@color/white"
-                    android:textSize="20dp">
+                    android:src="@drawable/wharehouseimage"
+                    android:scaleType="fitXY">
 
-                </TextView>
+                </ImageView>
 
             </LinearLayout>
 
@@ -37,39 +35,37 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/ln1"
                 android:layout_marginBottom="@dimen/ten"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="@dimen/ten"
                 android:layout_marginTop="17dp">
 
                 <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/profile_image"
                     android:layout_width="@dimen/seventy"
                     android:layout_height="@dimen/seventy"
-                    android:src="@drawable/profileimage"
-                    app:civ_border_color="#FF000000"
-                    app:civ_border_width="2dp"/>
+                    android:src="@drawable/wharehouseimage" />
 
                 <TextView
-                    android:id="@+id/userName"
+                    android:id="@+id/nav_userName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="@dimen/ten"
                     android:layout_marginTop="10dp"
                     android:layout_toRightOf="@id/profile_image"
                     android:text="Nakul Kumar"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/twenty_size"
                     android:textStyle="bold"></TextView>
 
                 <TextView
-                    android:id="@+id/userAddress"
+                    android:id="@+id/nav_userAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/userName"
-                    android:layout_marginLeft="15dp"
+                    android:layout_below="@id/nav_userName"
+                    android:layout_marginLeft="@dimen/ten"
                     android:layout_toRightOf="@id/profile_image"
                     android:text="Bangalore, India"
                     android:textColor="@color/white"
-                    android:textSize="18dp"
+                    android:textSize="@dimen/edittextsize"
                     android:textStyle="bold"></TextView>
 
             </RelativeLayout>
@@ -96,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/Dashboard"
                 android:textColor="#0A22A1"
-                android:textSize="25dp"
+                android:textSize="@dimen/twenty"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
@@ -105,7 +101,7 @@
             <View
                 android:id="@+id/view"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
+                android:layout_height="4dp"
                 android:layout_below="@+id/text1"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="13dp"
@@ -118,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/OrderRequest"
                 android:textColor="#5F5E5E"
-                android:textSize="22dp"
+                android:textSize="@dimen/edittextsize"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
@@ -130,7 +126,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/Supplier"
                 android:textColor="#5F5E5E"
-                android:textSize="22dp"
+                android:textSize="@dimen/edittextsize"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
@@ -142,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/PaymentRequest"
                 android:textColor="#5F5E5E"
-                android:textSize="22dp"
+                android:textSize="@dimen/edittextsize"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
@@ -154,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/Allusers"
                 android:textColor="#5F5E5E"
-                android:textSize="22dp"
+                android:textSize="@dimen/edittextsize"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
@@ -166,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/CreateProfile"
                 android:textColor="#5F5E5E"
-                android:textSize="22dp"
+                android:textSize="@dimen/edittextsize"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
@@ -178,7 +174,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/Product"
                 android:textColor="#5F5E5E"
-                android:textSize="22dp"
+                android:textSize="@dimen/edittextsize"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
@@ -190,7 +186,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/CreateProduct"
                 android:textColor="#5F5E5E"
-                android:textSize="22dp"
+                android:textSize="@dimen/edittextsize"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
@@ -202,7 +198,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/MyProfile"
                 android:textColor="#5F5E5E"
-                android:textSize="22dp"
+                android:textSize="@dimen/edittextsize"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="55dp"
                 android:textStyle="bold"
