--- a/app/src/main/res/drawable/edittextback.xml
+++ b/app/src/main/res/drawable/edittextback.xml
@@ -5,13 +5,13 @@
 
     <gradient
         android:angle="90"
-        android:endColor="#F0F0F0"
-        android:startColor="#F0F0F0"
+        android:endColor="#FFFFFF"
+        android:startColor="#FFFFFF"
         android:type="linear" />
 
     <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+        android:bottomLeftRadius="@dimen/five"
+        android:bottomRightRadius="@dimen/five"
+        android:topLeftRadius="@dimen/five"
+        android:topRightRadius="@dimen/five" />
 </shape>
