--- a/app/src/main/res/drawable/edittextback.xml
+++ b/app/src/main/res/drawable/edittextback.xml
@@ -5,13 +5,13 @@
 
     <gradient
         android:angle="90"
-        android:endColor="#FFFFFF"
-        android:startColor="#FFFFFF"
+        android:endColor="#F0F0F0"
+        android:startColor="#F0F0F0"
         android:type="linear" />
 
     <corners
-        android:bottomLeftRadius="@dimen/five"
-        android:bottomRightRadius="@dimen/five"
-        android:topLeftRadius="@dimen/five"
-        android:topRightRadius="@dimen/five" />
+        android:bottomLeftRadius="@dimen/ten"
+        android:bottomRightRadius="@dimen/ten"
+        android:topLeftRadius="@dimen/ten"
+        android:topRightRadius="@dimen/ten" />
 </shape>
