--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -121,7 +121,7 @@
             android:textSize="@dimen/edittextsize"
             android:textStyle="normal" />
 
-        <TextView
+      <!--  <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Forgot password ?"
@@ -132,13 +132,13 @@
             android:layout_marginRight="@dimen/ten"
             android:layout_gravity="right">
 
-        </TextView>
+        </TextView>-->
 
         <Button
             android:id="@+id/btn_Login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="@dimen/eighteen"
             android:background="@drawable/button_back"
             android:text="Login"
             android:textColor="@color/white"
