--- a/app/src/main/res/layout/createprofile_fragment.xml
+++ b/app/src/main/res/layout/createprofile_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/text"
@@ -64,7 +65,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="none"
         android:layout_below="@id/usertype">
 
@@ -484,7 +485,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ifc Code"
+                android:text="Ifsc Code"
                 android:fontFamily="@font/poppins_semibold"
                 android:textColor="@color/black"
                 android:textSize="@dimen/textsize"
@@ -536,7 +537,7 @@
                 android:textStyle="normal"/>
 
             <LinearLayout
-                android:id="@+id/usertype"
+                android:id="@+id/usertype1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:weightSum="2"
@@ -545,7 +546,7 @@
                 android:layout_marginRight="@dimen/twenty"
                 android:layout_marginTop="@dimen/twenty_size">
 
-                <TextView
+                <!--<TextView
                     android:id="@+id/text_panImage"
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -577,13 +578,59 @@
                     android:textColor="#000000"
                     android:layout_alignParentRight="true"
                     android:textSize="@dimen/textsize"
-                    android:textStyle="normal" />
+                    android:textStyle="normal" />-->
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="@dimen/hundred"
+                    android:elevation="@dimen/three"
+                    app:cardCornerRadius="@dimen/ten"
+                    android:layout_margin="@dimen/five">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/text_panImage"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/upload_image_dummy" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="@dimen/hundred"
+                    android:elevation="@dimen/three"
+                    app:cardCornerRadius="@dimen/ten"
+                    android:layout_margin="@dimen/five">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/text_gstImage"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/upload_image_dummy" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+
 
             </LinearLayout>
 
 
             <Button
-                android:id="@+id/btn_AddVender"
+                android:id="@+id/btn_AddVenderDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/twenty"
