--- a/app/src/main/res/layout/createprofile_fragment.xml
+++ b/app/src/main/res/layout/createprofile_fragment.xml
@@ -597,7 +597,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/upload_image_dummy" />
+                            android:src="@drawable/panimage" />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -619,7 +619,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/upload_image_dummy" />
+                            android:src="@drawable/gstimage" />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
